[gd_scene load_steps=13 format=3 uid="uid://cgba6k66jdqbk"]

[ext_resource type="Script" path="res://scenes/enemies/drone.gd" id="1_4rddu"]
[ext_resource type="Texture2D" uid="uid://bfrj64s3tkdto" path="res://graphics/enemies/drone.png" id="2_6mjo0"]
[ext_resource type="Shader" path="res://scenes/enemies/scout.gdshader" id="2_rraej"]
[ext_resource type="Texture2D" uid="uid://dekqom22lj7nx" path="res://graphics/explosions/explosion_3.png" id="3_7kplj"]
[ext_resource type="AudioStream" uid="uid://cuy2ufs5i1d1k" path="res://audio/explosion.wav" id="5_a34dr"]
[ext_resource type="AudioStream" uid="uid://dknjhpuiv0s1f" path="res://audio/solid_impact.ogg" id="5_fvolq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5mm7h"]
shader = ExtResource("2_rraej")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gcead"]
radius = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1vqyu"]
radius = 908.027

[sub_resource type="Animation" id="Animation_b7cqm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroneImage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q7niy"]
resource_name = "explosion"
length = 1.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroneImage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"stop_movement"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("5_a34dr")
}],
"times": PackedFloat32Array(0.05)
}
tracks/4/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_db1ht"]
_data = {
"RESET": SubResource("Animation_b7cqm"),
"explosion": SubResource("Animation_q7niy")
}

[node name="Drone" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_4rddu")

[node name="DroneImage" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5mm7h")
position = Vector2(0, -4)
rotation = 1.5708
texture = ExtResource("2_6mjo0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gcead")

[node name="NoticeArea2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea2D"]
shape = SubResource("CircleShape2D_1vqyu")

[node name="HitCooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="Explosion" type="Sprite2D" parent="."]
texture = ExtResource("3_7kplj")
hframes = 8
vframes = 8
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_db1ht")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_fvolq")

[connection signal="body_entered" from="NoticeArea2D" to="." method="_on_notice_area_2d_body_entered"]
[connection signal="timeout" from="HitCooldown" to="." method="_on_hit_cooldown_timeout"]
